# king-context

./: .env.example  .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-pt-br.md  README.md  db.py  pyproject.toml  run-seed-data.sh  seed_data.py  server.py  test_db.py  test_embeddings.py  test_load_embeddings.py  test_seed_data.py  test_server.py
.agents/skills/king-context/: SKILL.md
.agents/skills/king-research/: SKILL.md
.claude/skills/king-context/: skill.md
.claude/skills/process-docs/: SKILL.md
.claude/skills/scraper-workflow/: skill.md
.claude/skills/search-docs-crawl4ai/: SKILL.md
.claude/skills/search-docs-firecrawl/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
.king-context/adr/: 0001-adopt-cli-first-architecture-for-agent-retrieval.md  0002-centralize-installer-layout-reconciliation.md  0003-pluggable-llm-provider-abstraction-for-cli-tools.md  0004-treat-multi-os-compatibility-macos-linux-windows-as-a-baseline.md  0005-local-ui-server-reads-cli-flat-file-surface-not-mcp-sqlite-layer.md  0006-local-ui-server-mvp-is-read-only-read-write-is-planned-but-deferred.md  0007-python-stdlib-http-server-with-design-for-swap-adapter-pattern-for-local-ui-server.md  0008-ui-static-assets-bundled-inside-python-wheel-not-in-installer-templates.md  0009-pluggable-scraper-provider-abstraction-for-king-scrape.md  0010-thin-scraper-provider-with-pipeline-owned-concurrency-checkpoint-and-io.md  0011-crawl4ai-selected-as-first-local-scraping-backend.md  0012-content-hash-provenance-and-enrichment-cache.md  0013-corpus-drift-audit-subcommand.md  0014-incremental-corpus-refresh.md
.specs/features/local-models-enrichment/: human.md
.specs/features/scraper-skill-workflow/: tasks.md
.specs/project/: STATE.md
data/: elevenlabs-api.json  embeddings.npy  gladia.json  minimax-audio.json  openrouter.json
data/_internal/: section_mapping.json
docs/: CLI_GUIDE.md  architecture.md  benchmarks.md  case-studies.md  index.md  ollama.md  roadmap.md  ui-local.md  vision.md
docs/designs/: 2026-01-16-semantic-search.md
input/gladia/: _checkpoint.json  _metadata.json  merge.py
input/gladia/audio-intelligence/: batch.json
input/gladia/integrations/: batch.json
input/gladia/introduction/: batch.json
input/gladia/language/: batch.json
input/gladia/limits-and-specs/: batch.json
input/gladia/live-stt/: batch1.json  batch2.json
input/minimax-audio/: _metadata.json
installer/: package.json
installer/lib/: doctor.js  init.js  python.js  scaffold.js  skills.js  ui.js  update.js
installer/templates/: claude-md-snippet.md  env.example  wrapper-kctx.sh  wrapper-research.sh  wrapper-scrape.sh
scripts/: run-seed-data.sh  smoke-crawl4ai.py
src/context_cli/: __init__.py  adr.py  cli.py  formatter.py  grep.py  indexer.py  ingest.py  llm_doctor.py  reader.py  searcher.py  store.py
src/king_context/: __init__.py  db.py  env.py  errors.py  seed_data.py  server.py
src/llm_providers/: __init__.py  base.py  config.py  fallback.py  logging.py  ollama.py  openrouter.py  parser.py  registry.py
src/scraper_providers/: __init__.py  base.py  crawl4ai_provider.py  firecrawl_provider.py  registry.py
tests/: conftest.py  test_db.py  test_doctor_llm.py  test_installer_gitignore.py  test_installer_scaffold.py  test_load_embeddings.py  test_scraper_cli_flags.py  test_scraper_enrich_resume.py  test_scraper_fetch_resume.py  test_scraper_manifest.py  test_scraper_resume_integration.py  test_scraper_sync.py  test_seed_data.py  test_server.py  test_web_corpus.py  test_web_handlers.py  test_web_render.py  test_web_search.py  test_web_server.py  test_web_static.py
tests/test_context_cli/: test_adr.py  test_cli.py  test_formatter.py  test_grep.py  test_indexer.py  test_ingest.py  test_reader.py  test_searcher.py  test_store.py  test_topics.py
tests/test_llm_providers/: test_clients.py  test_config.py  test_factory.py  test_fallback.py  test_parser.py  test_registry.py
tests/test_research/: test_cli.py  test_config.py  test_deepen.py  test_exa.py  test_export.py  test_fetch.py  test_integration.py  test_jina.py  test_pipeline.py  test_queries.py
tests/test_scraper/: test_audit.py  test_chunk.py  test_cli.py  test_config.py  test_discover.py  test_enrich.py  test_enrich_cache.py  test_export.py  test_fetch.py  test_filter.py  test_pipeline_injection.py  test_update.py  test_url_utils.py
tests/test_scraper_providers/: conftest.py  test_base.py  test_crawl4ai_provider.py  test_entry_points.py  test_firecrawl_provider.py  test_registry.py  test_resolution.py
validation/examples/: README.md
validation/minimax-tts-first-shot/: .env.example  .gitignore  README.md  minimax_tts.py
(+58 files in other folders)
