[project]
name = "king-context"
version = "0.2.0"
description = "Local-first, token-efficient documentation server for LLM context injection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "firecrawl-py>=1.0.0",
    "httpx>=0.27.0",
    "exa-py>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]

[project.scripts]
king-context-server = "king_context.server:main"
king-scrape = "king_context.scraper.cli:main"
king-research = "king_context.research.cli:main"
kctx = "context_cli.cli:main"

[project.urls]
Homepage = "https://github.com/deandevz/king-context"
Repository = "https://github.com/deandevz/king-context"
Issues = "https://github.com/deandevz/king-context/issues"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/king_context", "src/context_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
