[project]
name = "king-context"
version = "0.3.2"
description = "Local-first, token-efficient documentation server for LLM context injection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "deandevz", email = "bruucetscontact@gmail.com" },
]
keywords = [
    "mcp",
    "llm",
    "documentation",
    "search",
    "context",
    "claude",
    "ai-agents",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "exa-py>=1.0.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
]
firecrawl = ["firecrawl-py>=1.0.0"]
crawl4ai = ["crawl4ai>=0.8.5,<0.9"]
all = ["king-context[firecrawl,crawl4ai]"]

[project.scripts]
king-context-server = "king_context.server:main"
king-scrape = "king_context.scraper.cli:main"
king-research = "king_context.research.cli:main"
kctx = "context_cli.cli:main"

[project.entry-points."king_context.scraper_providers"]
firecrawl = "scraper_providers.firecrawl_provider:register"
crawl4ai = "scraper_providers.crawl4ai_provider:register"

[project.urls]
Homepage = "https://github.com/deandevz/king-context"
Repository = "https://github.com/deandevz/king-context"
Issues = "https://github.com/deandevz/king-context/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/king_context", "src/context_cli", "src/llm_providers", "src/scraper_providers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
